version 2022d, in progress
- "midasreg" command: generate more specific error message
  for invalid specification
- pexpand() function: add optional boolean switch to expand
  in the cross-sectional dimension
- readfile() function: ensure that we construct a legitimate
  local filename when downloading a web resource
- normtest() function: add option to include all available
  tests in the returned matrix
- int() function: return NA if the integer part of the argument
  lies beyond the range of a 32-bit signed integer
- CSV data importation: be less hasty in concluding that the
  column separator is comma
- CSV importation via GUI: clarify the dialog that governs
  how the first column is treated
- "join" via the GUI: make it evident that specifying keys
  may not be necessary with time-series data
- "system" command: ensure that the $system bundle includes
  the sample limits as "sample_t1" and "sample_t2"
- Fix error message for invalid (string) array index
- Fix error message for missing function-package dependency
- Fix bug: buffer overrun when creating names for transformed
  series if the original series has a very long name
- Fix bug: crash on doing "pkg install" from the command line
  when the window listing function packages on the server is
  displayed at the time
- Fix bug: possible false positive when checking for duplicate
  function packages
- Fix for detection of the R executable when called via a
  foreign block on macOS
- macOS build: include TargetConditionals.h in libgretl.h

2022-11-01 version 2022c
- substantial speed-up for hansl functions called from loops
  or other iterative contexts
- lists and strings: support vector selection of elements
- "printf" command: support a named string variable as the
  "format" argument
- "ols" command with --jackknife option: make the output more
  specific, and complain when this option is not applicable
- "panplot" command: add --single-yaxis option, and support